cluster/core/kubernetes-dashboard/kubernetes-dashboard-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-local-ingressroute
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes-dashboard.untch.local`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
  tls:
    certResolver: letsencrypt
